--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="box-shadow: 0px 1px 100px rgb(207, 200, 200);">
+            <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="media/logo.png" class="logo" alt="logo" />
                 </a>
@@ -45,6 +46,104 @@
         </nav>
     </header>
 
+    <main>
+        <!-- Counter Section -->
+        <section id="CounterSection">
+            <div class="container">
+                <div class="row">
+                    <h1 class="col">موعد إنطلاق الهاكثون</h1>
+                </div>
+                <div class="row cards">
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <div id="counterCard" class="card" style="width: 18rem;">
+                            <div id="counterHead" class="card-header">
+                                <p id="day"></p>
+                            </div>
+                            <div id="counterBody" class="card-body">
+                                <p class="card-text">يوم</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <div id="counterCard" class="card" style="width: 18rem;">
+                            <div id="counterHead" class="card-header">
+                                <p id="hour"></p>
+                            </div>
+                            <div id="counterBody" class="card-body">
+                                <p class="card-text">ساعة</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <div id="counterCard" class="card" style="width: 18rem;">
+                            <div id="counterHead" class="card-header">
+                                <p id="minute"></p>
+                            </div>
+                            <div id="counterBody" class="card-body">
+                                <p class="card-text">دقيقة</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <div id="counterCard" s class="card" style="width: 18rem;">
+                            <div id="counterHead" class="card-header">
+                                <p id="second"></p>
+                            </div>
+                            <div id="counterBody" class="card-body">
+                                <p class="card-text">ثانية</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row"><a id="signUp" class="btn" href="https://forms.gle/yXeYDH4FZuKssmdN6">سجل الآن</a></div>
+            </div>
+        </section>
+        <!-- End of counter section -->
+        <!-- What is it? Section -->
+        <section id="whatIsIt">
+
+        </section>
+        <!-- End of What is it Section -->
+    </main>
+    <footer>
+
+    </footer>
+
+    <script>
+        // the of the hackathon 
+        var countDownDate = new Date("Mar 24, 2022 00:00:00").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function() {
+
+            // Get today's date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Display the result in the elements
+            document.getElementById("day").innerHTML = days;
+            document.getElementById("hour").innerHTML = hours;
+            document.getElementById("minute").innerHTML = minutes;
+            document.getElementById("second").innerHTML = seconds;
+
+            // If the count down is finished, write some text
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("day").innerHTML = 0;
+                document.getElementById("hour").innerHTML = 0;
+                document.getElementById("minute").innerHTML = 0;
+                document.getElementById("second").innerHTML = 0;
+            }
+        }, 1000);
+    </script>
 </body>
 
 </html>
