--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="box-shadow: 0px 1px 100px rgb(207, 200, 200);">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="box-shadow: 0px 20px 100px rgb(160, 149, 149);">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="media/logo.png" class="logo" alt="logo" />
@@ -47,8 +47,30 @@
     </header>
 
     <main>
+        <!-- What is it? Section -->
+        <section id="whatIsIt" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
+            <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
+            <div class="overlay"></div>
+
+            <!-- The HTML5 video element that will create the background video on the header -->
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+              <source src="media/KSU_.mp4" type="video/mp4">
+            </video>
+
+            <!-- What is it content -->
+            <div class="container h-100">
+                <div class="d-flex h-100 text-center align-items-center">
+                    <div class="w-100 text-white">
+                        <h1 class="display-3" style="font-weight: 400;">هاكثون جامعة الملك سعود</h1>
+                        <br><br>
+                        <p class="lead mb-0 fs-1">مبادرة غايتها تمكين الطلبة من ابتكار حلول إبداعية، تساهم في تعزيز البيئة الجامعية وتحسينها، بمسارات تتماشى مع رؤية المملكة. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End of What is it Section -->
         <!-- Counter Section -->
-        <section id="CounterSection">
+        <section id="CounterSection" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
             <div class="container">
                 <div class="row">
                     <h1 class="col">موعد إنطلاق الهاكثون</h1>
@@ -99,11 +121,60 @@
             </div>
         </section>
         <!-- End of counter section -->
-        <!-- What is it? Section -->
-        <section id="whatIsIt">
-
+        <!-- Fields Section -->
+        <section style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189); margin-top: 20px;">
+            <div id="fieldsContainer" class="container d-flex align-items-center justify-content-center flex-wrap">
+                <div class="box">
+                    <div class="body">
+                        <div class="imgContainer">
+                            <img src="media/programmer.png" alt="" />
+                        </div>
+                        <div class="content d-flex flex-column align-items-center justify-content-center">
+                            <div>
+                                <p class="fs-6 text-white">من لديه خبرة سابقة في البرمجة وصناعة التطبيقات
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="body">
+                        <div class="imgContainer">
+                            <img src="media/Designer.png" alt="" />
+                        </div>
+                        <div class="content d-flex flex-column align-items-center justify-content-center">
+                            <div>
+                                <p class="fs-6 text-white">من لديه خبرة سابقة في التصميم ولا يشترط خبرة برنامج محدد</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="body">
+                        <div class="imgContainer">
+                            <img src="media/Enterprunuer.png" alt="" />
+                        </div>
+                        <div class="content d-flex flex-column align-items-center justify-content-center">
+                            <div>
+                                <p class="fs-6 text-white">رائد أعمال أو متخصص في إدارة الأعمال</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="body">
+                        <div class="imgContainer">
+                            <img src="media/IdeaDev.png" alt="" />
+                        </div>
+                        <div class="content d-flex flex-column align-items-center justify-content-center">
+                            <div>
+                                <p class="fs-6 text-white">لديه القدرة على إيجاد حل للمشكلات، ويفكر خارج الصندوق بطريقة إبداعية</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- End of What is it Section -->
     </main>
     <footer>
 
