--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
         <!-- End of What is it Section -->
         <!-- Counter Section -->
-        <section id="CounterSection" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
+        <section id="CounterSection">
             <div class="container">
                 <div class="row">
                     <h1 class="col">موعد إنطلاق الهاكثون</h1>
@@ -122,7 +122,7 @@
         </section>
         <!-- End of counter section -->
         <!-- Fields Section -->
-        <section style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189); margin-top: 20px;">
+        <section class="wave" style="padding: 5% 0%;">
             <div id="fieldsContainer" class="container d-flex align-items-center justify-content-center flex-wrap">
                 <div class="box">
                     <div class="body">
@@ -131,7 +131,7 @@
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
-                                <p class="fs-6 text-white">من لديه خبرة سابقة في البرمجة وصناعة التطبيقات
+                                <p class="fs-6">من لديه خبرة سابقة في البرمجة وصناعة التطبيقات
                                 </p>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
-                                <p class="fs-6 text-white">من لديه خبرة سابقة في التصميم ولا يشترط خبرة برنامج محدد</p>
+                                <p class="fs-6">من لديه خبرة سابقة في التصميم ولا يشترط خبرة برنامج محدد</p>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
-                                <p class="fs-6 text-white">رائد أعمال أو متخصص في إدارة الأعمال</p>
+                                <p class="fs-6">رائد أعمال أو متخصص في إدارة الأعمال</p>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
-                                <p class="fs-6 text-white">لديه القدرة على إيجاد حل للمشكلات، ويفكر خارج الصندوق بطريقة إبداعية</p>
+                                <p class="fs-6">لديه القدرة على إيجاد حل للمشكلات، ويفكر خارج الصندوق بطريقة إبداعية</p>
                             </div>
                         </div>
                     </div>
