Tracks section done

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         </section>
         <!-- End of counter section -->
         <!-- Fields Section -->
-        <section class="wave" style="padding: 5% 0%;">
+        <section class="wave" style="padding: 7% 0%;">
+            <h1 class="text-white" style="margin-bottom: 3%;">تستطيع أن تشارك كـ</h1>
             <div id="fieldsContainer" class="container d-flex align-items-center justify-content-center flex-wrap">
                 <div class="box">
                     <div class="body">
@@ -175,6 +176,39 @@
                 </div>
             </div>
         </section>
+        <!-- End of Fields Section  -->
+        <!-- Tracks section -->
+        <section>
+            <h1 style="color: #656565; text-align: center; font-weight:600; margin: 4% 0%;">المسارات</h1>
+            <div class="container">
+                <div class="row d-flex justify-content-center">
+                    <div id="tracksCards" class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">مسار الأمن والسلامة</h5>
+                            <hr>
+                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                        </div>
+                    </div>
+                    <div id="tracksCards" class="card ">
+                        <div class="card-body">
+                            <h5 class="card-title">مسار الأمن والسلامة</h5>
+                            <hr>
+                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                    <div id="tracksCards" class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">مسار الأمن والسلامة</h5>
+                            <hr>
+                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End of Tracks section -->
     </main>
     <footer>
 
