--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </section>
         <!-- End of Fields Section  -->
         <!-- Tracks section -->
-        <section>
+        <section style="margin-bottom: 10%;">
             <h1 style="color: #656565; text-align: center; font-weight:600; margin: 4% 0%;">المسارات</h1>
             <div class="container">
                 <div class="row d-flex justify-content-center">
@@ -209,9 +209,65 @@
             </div>
         </section>
         <!-- End of Tracks section -->
-    </main>
-    <footer>
+        <!-- Conditions Section -->
+        <section id="ConditionContainer" style="box-shadow: 0px 0px 40px 60px #4c122f;">
+            <div class="container">
+                <h1>الشروط والأحكام</h1>
 
+                <div class="row">
+                    <div id="Condition" class="card">
+                        <div class="card-body">
+                            <p class="card-text"> أن یكون المشارك طالبا منتظما في أحد جامعات منطقة الریاض</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="Condition" class="card">
+                        <div class="card-body">
+                            <p class="card-text">أن تكون المعلومات الخاصة بالمشارك كاملة وصحیحة</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="Condition" class="card">
+                        <div class="card-body">
+                            <p class="card-text"> أن یمتلك المشارك كافة المھارات اللازمة حسب دوره في الفریق للمشاركة في الھاكثون</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="Condition" class="card">
+                        <div class="card-body">
+                            <p class="card-text">أن یمتلك المشارك القدرة على العمل ضمن الفریق</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="Condition" class="card">
+                        <div class="card-body">
+                            <p class="card-text"> أن یلتزم المشارك بحضور الھاكثون كاملاً</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--End of Conditions Section -->
+    </main>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container d-flex justify-content-around align-items-center">
+            <img src="media/whiteLogo.png" alt="" />
+            <a href="#">التسجيل</a>
+            <a href="#">المجالات</a>
+            <a href="#">المسارات</a>
+            <a href="#">الشروط والأحكام</a>
+        </div>
+        <div class="container d-flex justify-content-around align-items-center text-white p-2">
+            <small style="font-weight: lighter;">جميع الحقوق محفوظة</small></div>
     </footer>
 
     <script>
