--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a id="navItem" class="nav-link" href="#">التسجيل</a>
+                            <a id="navItem" class="nav-link" href="#CounterSection">التسجيل</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">المجالات</a>
+                            <a class="nav-link" href="#fields">المجالات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">المسارات</a>
+                            <a class="nav-link" href="#tracks">المسارات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">الشروط والأحكام</a>
+                            <a class="nav-link" href="#ConditionContainer">الشروط والأحكام</a>
                         </li>
                     </ul>
                 </div>
@@ -117,12 +117,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="row"><a id="signUp" class="btn" href="https://forms.gle/yXeYDH4FZuKssmdN6">سجل الآن</a></div>
+                <div class="row"><a id="signUp" class="btn" href="https://forms.gle/yXeYDH4FZuKssmdN6" target="_blank">سجل الآن</a></div>
             </div>
         </section>
         <!-- End of counter section -->
         <!-- Fields Section -->
-        <section class="wave" style="padding: 7% 0%;">
+        <section class="wave" style="padding: 7% 0%;" id="fields">
             <h1 class="text-white" style="margin-bottom: 3%;">تستطيع أن تشارك كـ</h1>
             <div id="fieldsContainer" class="container d-flex align-items-center justify-content-center flex-wrap">
                 <div class="box">
@@ -178,7 +178,7 @@
         </section>
         <!-- End of Fields Section  -->
         <!-- Tracks section -->
-        <section style="margin-bottom: 10%;">
+        <section style="margin-bottom: 10%;" id="tracks">
             <h1 style="color: #656565; text-align: center; font-weight:600; margin: 4% 0%;">المسارات</h1>
             <div class="container">
                 <div class="row d-flex justify-content-center">
@@ -191,18 +191,19 @@
                     </div>
                     <div id="tracksCards" class="card ">
                         <div class="card-body">
-                            <h5 class="card-title">مسار الأمن والسلامة</h5>
+                            <h5 class="card-title">مسار التطوع</h5>
                             <hr>
-                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                            <p class="card-text">يعنى بابتكار وتطوير تقنيات تخدم الأنشطة الطلابية التطوعية بما في ذلك الأندية الطلابية ، المهرجانات، والفعاليات وغيرها</p>
                         </div>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <div id="tracksCards" class="card">
                         <div class="card-body">
-                            <h5 class="card-title">مسار الأمن والسلامة</h5>
+                            <h5 class="card-title">مسار مفتوح</h5>
                             <hr>
-                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                            <p class="card-text">يعنى بإيجاد حلول تخدم كافة القطاعات الجامعية، وتحل عدداً من المشكلات اليومية
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -210,7 +211,7 @@
         </section>
         <!-- End of Tracks section -->
         <!-- Conditions Section -->
-        <section id="ConditionContainer" style="box-shadow: 0px 0px 40px 60px #4c122f;">
+        <section id="ConditionContainer" style="">
             <div class="container">
                 <h1>الشروط والأحكام</h1>
 
@@ -261,10 +262,10 @@
     <footer id="footer">
         <div class="container d-flex justify-content-around align-items-center">
             <img src="media/whiteLogo.png" alt="" />
-            <a href="#">التسجيل</a>
-            <a href="#">المجالات</a>
-            <a href="#">المسارات</a>
-            <a href="#">الشروط والأحكام</a>
+            <a href="#CounterSection">التسجيل</a>
+            <a href="#fields">المجالات</a>
+            <a href="#tracks">المسارات</a>
+            <a href="#ConditionContainer">الشروط والأحكام</a>
         </div>
         <div class="container d-flex justify-content-around align-items-center text-white p-2">
             <small style="font-weight: lighter;">جميع الحقوق محفوظة</small></div>
