--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- End of counter section -->
         <!-- Fields Section -->
         <section class="wave" style="padding: 7% 0%;" id="fields">
-            <h1 class="text-white" style="margin-bottom: 3%;">تستطيع أن تشارك كـ</h1>
+            <h1 class="text-white" id="fieldsh1">تستطيع أن تشارك كـ</h1>
             <div id="fieldsContainer" class="container d-flex align-items-center justify-content-center flex-wrap">
                 <div class="box">
                     <div class="body">
@@ -181,7 +181,7 @@
         <section style="margin-bottom: 10%;" id="tracks">
             <h1 style="color: #656565; text-align: center; font-weight:600; margin: 4% 0%;">المسارات</h1>
             <div class="container">
-                <div class="row d-flex justify-content-center">
+                <div class="row">
                     <div id="tracksCards" class="card">
                         <div class="card-body">
                             <h5 class="card-title">مسار الأمن والسلامة</h5>
@@ -189,7 +189,9 @@
                             <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
                         </div>
                     </div>
-                    <div id="tracksCards" class="card ">
+                </div>
+                <div class="row">
+                    <div id="tracksCards" class="card">
                         <div class="card-body">
                             <h5 class="card-title">مسار التطوع</h5>
                             <hr>
@@ -197,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-center">
+                <div class="row">
                     <div id="tracksCards" class="card">
                         <div class="card-body">
                             <h5 class="card-title">مسار مفتوح</h5>
@@ -211,7 +213,7 @@
         </section>
         <!-- End of Tracks section -->
         <!-- Conditions Section -->
-        <section id="ConditionContainer" style="">
+        <section id="ConditionContainer">
             <div class="container">
                 <h1>الشروط والأحكام</h1>
 
