--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text"> أن یكون المشارك طالبا منتظما في أحد جامعات منطقة الریاض</p>
+                            <p class="card-text"> أن يكون المشارك طالبا منتظما في أحد جامعات منطقة الرياض</p>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text">أن تكون المعلومات الخاصة بالمشارك كاملة وصحیحة</p>
+                            <p class="card-text">أن تكون المعلومات الخاصة بالمشارك كاملة وصحيحة</p>
                         </div>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text"> أن یمتلك المشارك كافة المھارات اللازمة حسب دوره في الفریق للمشاركة في الھاكثون</p>
+                            <p class="card-text"> أن يمتلك المشارك كافة المهارات اللازمة حسب دوره في الفریق للمشاركة في الهاكثون</p>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text">أن یمتلك المشارك القدرة على العمل ضمن الفریق</p>
+                            <p class="card-text">أن يمتلك المشارك القدرة على العمل ضمن الفریق</p>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text"> أن یلتزم المشارك بحضور الھاكثون كاملاً</p>
+                            <p class="card-text"> أن يلتزم المشارك بحضور الهاكثون كاملاً</p>
                         </div>
                     </div>
                 </div>
