--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text"> أن يمتلك المشارك كافة المهارات اللازمة حسب دوره في الفریق للمشاركة في الهاكثون</p>
+                            <p class="card-text"> أن يمتلك المشارك كافة المهارات اللازمة حسب دوره في الفريق للمشاركة في الهاكثون</p>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div id="Condition" class="card">
                         <div class="card-body">
-                            <p class="card-text">أن يمتلك المشارك القدرة على العمل ضمن الفریق</p>
+                            <p class="card-text">أن يمتلك المشارك القدرة على العمل ضمن الفريق</p>
                         </div>
                     </div>
                 </div>
