--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h1 class="col">موعد إنطلاق الهاكثون</h1>
                 </div>
                 <div class="row cards">
-                    <div class="col-md-3 d-flex justify-content-center">
+                    <div class="col-3 d-flex justify-content-center">
                         <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
                                 <p id="day"></p>
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center">
+                    <div class="col-3 d-flex justify-content-center">
                         <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
                                 <p id="hour"></p>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center">
+                    <div class="col-3 d-flex justify-content-center">
                         <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
                                 <p id="minute"></p>
@@ -105,8 +105,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center">
-                        <div id="counterCard" s class="card" style="width: 18rem;">
+                    <div class="col-3 d-flex justify-content-center">
+                        <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
                                 <p id="second"></p>
                             </div>
