--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#ConditionContainer">الشروط والأحكام</a>
                         </li>
+                        <li class="nav-item">
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -60,7 +62,7 @@
                     <div class="w-100 text-white">
                         <h1 class="display-3" style="font-weight: 400;">هاكثون جامعة الملك سعود</h1>
                         <br><br>
-                        <p class="lead mb-0 fs-1">مبادرة غايتها تمكين الطلبة من ابتكار حلول إبداعية، تساهم في تعزيز البيئة الجامعية وتحسينها، بمسارات تتماشى مع رؤية المملكة. </p>
+                        <p class="lead mb-0 fs-1"> غايتنا تمكين الطلبة من ابتكار حلول إبداعية، تساهم في تعزيز البيئة الجامعية وتحسينها، بمسارات تتماشى مع رؤية المملكة. </p>
                     </div>
                 </div>
             </div>
@@ -76,20 +78,10 @@
                     <div class="col-3 d-flex justify-content-center">
                         <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
-                                <p id="day"></p>
+                                <p id="second"></p>
                             </div>
                             <div id="counterBody" class="card-body">
-                                <p class="card-text">يوم</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3 d-flex justify-content-center">
-                        <div id="counterCard" class="card" style="width: 18rem;">
-                            <div id="counterHead" class="card-header">
-                                <p id="hour"></p>
-                            </div>
-                            <div id="counterBody" class="card-body">
-                                <p class="card-text">ساعة</p>
+                                <p class="card-text">ثانية</p>
                             </div>
                         </div>
                     </div>
@@ -106,10 +98,20 @@
                     <div class="col-3 d-flex justify-content-center">
                         <div id="counterCard" class="card" style="width: 18rem;">
                             <div id="counterHead" class="card-header">
-                                <p id="second"></p>
+                                <p id="hour"></p>
                             </div>
                             <div id="counterBody" class="card-body">
-                                <p class="card-text">ثانية</p>
+                                <p class="card-text">ساعة</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 d-flex justify-content-center">
+                        <div id="counterCard" class="card" style="width: 18rem;">
+                            <div id="counterHead" class="card-header">
+                                <p id="day"></p>
+                            </div>
+                            <div id="counterBody" class="card-body">
+                                <p class="card-text">يوم</p>
                             </div>
                         </div>
                     </div>
@@ -125,7 +127,7 @@
                 <div class="box">
                     <div class="body">
                         <div class="imgContainer">
-                            <img src="media/programmer.png" alt="" />
+                            <img class="img-fluid" src="media/programmer.png" alt="" />
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
@@ -138,7 +140,7 @@
                 <div class="box">
                     <div class="body">
                         <div class="imgContainer">
-                            <img src="media/Designer.png" alt="" />
+                            <img class="img-fluid" src="media/Designer.png" alt="" />
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
@@ -150,7 +152,7 @@
                 <div class="box">
                     <div class="body">
                         <div class="imgContainer">
-                            <img src="media/Enterprunuer.png" alt="" />
+                            <img class="img-fluid" src="media/Enterprunuer.png" alt="" />
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
@@ -162,7 +164,7 @@
                 <div class="box">
                     <div class="body">
                         <div class="imgContainer">
-                            <img src="media/IdeaDev.png" alt="" />
+                            <img class="img-fluid" src="media/IdeaDev.png" alt="" />
                         </div>
                         <div class="content d-flex flex-column align-items-center justify-content-center">
                             <div>
@@ -183,7 +185,7 @@
                         <div class="card-body">
                             <h5 class="card-title">مسار الأمن والسلامة</h5>
                             <hr>
-                            <p class="card-text">يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعية </p>
+                            <p class="card-text"><br>يعنى بابتكار وتطوير خدمات تزيد مستوى الأمن والسلامة داخل الحرم الجامعي.</p>
                         </div>
                     </div>
                 </div>
@@ -201,13 +203,14 @@
                         <div class="card-body">
                             <h5 class="card-title">مسار مفتوح</h5>
                             <hr>
-                            <p class="card-text">يعنى بإيجاد حلول تخدم كافة القطاعات الجامعية، وتحل عدداً من المشكلات اليومية
+                            <p class="card-text"><br>يعنى بإيجاد حلول تخدم كافة القطاعات الجامعية، وتحل عدداً من المشكلات اليومية
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <br><br>
         <!-- End of Tracks section -->
         <!-- Conditions Section -->
         <section id="ConditionContainer">
@@ -255,7 +258,54 @@
                 </div>
             </div>
         </section>
+        <br><br><br>
         <!--End of Conditions Section -->
+        <!-- الرعاة -->
+        <section id="partners">
+            <div class="container">
+                <h1>شركاء النجاح</h1>
+                <!-- Golden -->
+                <div class="row" id="golden">
+                    <div class="col-4">
+                        <h2>الراعي الذهبي</h2>
+                    </div>
+                    <div class="col-8">
+                        <img class="img-fluid" src="media/wadi.png" alt="" />
+                    </div>
+                </div>
+                <!-- Tech partner -->
+                <div class="row" id="Tech">
+                    <div class="col-4">
+                        <h2>الشريك التقني</h2>
+                    </div>
+                    <div class="col-8">
+                        <img class="img-fluid" src="media/Atta.png" alt="" />
+                    </div>
+                </div>
+                <!-- consultent partner -->
+                <div class="row" id="consultent">
+                    <div class="col-4">
+                        <h2>الشريك الاستشاري</h2>
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid" src="media/riyadah.png" alt="" />
+                    </div>
+                    <div class="col-4">
+                        <img class="img-fluid" src="media/OCEANX.png" alt="" />
+                    </div>
+                </div>
+                <!-- Media partner -->
+                <div class="row" id="mediaP">
+                    <div class="col-4">
+                        <h2>الشريك الإعلامي</h2>
+                    </div>
+                    <div class="col-8">
+                        <img class="img-fluid" src="media/tanweel.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- نهاية الرعاة -->
     </main>
     <!-- Footer -->
     <footer id="footer">
