--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                             <a class="nav-link" href="#ConditionContainer">الشروط والأحكام</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#partners">شركاء النجاح</a>
                         </li>
                     </ul>
                 </div>
