--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="CounterSection">
             <div class="container">
                 <div class="row">
-                    <h1 class="col">موعد إنطلاق الهاكثون</h1>
+                    <h1 class="col">موعد انطلاق الهاكثون</h1>
                 </div>
                 <div class="row cards">
                     <div class="col-3 d-flex justify-content-center">
@@ -214,7 +214,7 @@
         <br><br>
         <!-- End of Tracks section -->
         <!-- Conditions Section -->
-        <section id="ConditionContainer">
+        <section class="wave" id="ConditionContainer">
             <div class="container">
                 <h1>الشروط والأحكام</h1>
 
