--- a/index.html
+++ b/index.html
@@ -311,15 +311,11 @@
         <!-- نهاية الرعاة -->
     </main>
     <!-- Footer -->
-    <footer id="footer">
-        <div class="container d-flex justify-content-around align-items-center">
+    <footer class="row" id="footer">
+        <div class="container d-flex justify-content-around align-items-center col-3">
             <img src="media/whiteLogo.png" alt="" />
-            <a href="#CounterSection">التسجيل</a>
-            <a href="#fields">المجالات</a>
-            <a href="#tracks">المسارات</a>
-            <a href="#ConditionContainer">الشروط والأحكام</a>
         </div>
-        <div class="container d-flex justify-content-around align-items-center text-white p-2">
+        <div class="container d-flex justify-content-around align-items-center text-white p-2 col-9">
             <small style="font-weight: lighter;">جميع الحقوق محفوظة</small></div>
     </footer>
 
