--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </header>
 
     <main>
+        <img id="messenger" src="media/messenger.png" alt="" />
         <!-- What is it? Section -->
         <section id="whatIsIt" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
             <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
