--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     </header>
 
     <main>
-        <img id="messenger" src="media/messenger.png" alt="" />
+        <a id="messenger" href="https://api.whatsapp.com/message/M2EI3AYPLRYHD1?autoload=1&app_absent=0" target="_blank">
+            <img src="media/messenger.png" alt="" /></a>
         <!-- What is it? Section -->
         <section id="whatIsIt" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
             <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
