--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a id="navItem" class="nav-link" href="#CounterSection">التسجيل</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#fields">المجالات</a>
+                            <a class="nav-link" href="#fields">الأدوار</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#tracks">المسارات</a>
