--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
         </nav>
     </header>
 
+    <div class="container">
+        <a href="https://iwtsp.com/966118050661" target="_blank">
+            <img id="messenger" src="media/messenger.png" alt="" />
+        </a>
+    </div>
+
     <main>
-        <a href="https://api.whatsapp.com/message/M2EI3AYPLRYHD1?autoload=1&app_absent=0" target="_blank">
-            <img id="messenger" src="media/messenger.png" alt="" /></a>
         <!-- What is it? Section -->
         <section id="whatIsIt" style="box-shadow: 0px 20px 40px 10px rgb(192, 189, 189);">
             <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
@@ -292,11 +296,8 @@
                     <div class="col-4">
                         <h2>الشريك الاستشاري</h2>
                     </div>
-                    <div class="col-4">
+                    <div class="col-8">
                         <img class="img-fluid" src="media/riyadah.png" alt="" />
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid" src="media/OCEANX.png" alt="" />
                     </div>
                 </div>
                 <!-- Media partner -->
@@ -313,11 +314,11 @@
         <!-- نهاية الرعاة -->
     </main>
     <!-- Footer -->
-    <footer class="row" id="footer">
-        <div class="container d-flex justify-content-around align-items-center col-3">
+    <footer class="container d-flex justify-content-around align-items-center" id="footer">
+        <div class="">
             <img src="media/whiteLogo.png" alt="" />
         </div>
-        <div class="container d-flex justify-content-around align-items-center text-white p-2 col-9">
+        <div class="text-white">
             <small style="font-weight: lighter;">جميع الحقوق محفوظة</small></div>
     </footer>
 
