--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <!-- نهاية الرعاة -->
     </main>
     <!-- Footer -->
-    <footer class="container d-flex justify-content-around align-items-center" id="footer">
+    <footer class="container-fluid d-flex justify-content-around align-items-center" id="footer">
         <div class="">
             <img src="media/whiteLogo.png" alt="" />
         </div>
